SERVER-22054 Report client address in authentication failure error

(cherry picked from commit e3615ee6dd75d8a895d57f79c0950cfb1b5cd6bc)